Project-2/LOCOAL/erp/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: erp-deployment
  namespace: erp-dev
  labels:
    app: erp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: erp-app
  template:
    metadata:
      name: erp-pod
      labels:
        app: erp-app
    spec:
      containers:
        - name: erp-dev-container
          image: chethan2527/erp:v1
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi" # Increased from 100Mi
            limits:
              cpu: "500m"
              memory: "512Mi" # Increased from 100Mi
