Project-2/LOCOAL/erp/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: erp-app-service
  namespace: erp-dev
spec:
  type: NodePort
  selector:
    app: erp-app
  ports:
    - port: 80 # Service port
      targetPort: 8000 # Container port (changed from 8000 to 80)
      nodePort: 30081 # External access port
