Project-2/LOCOAL/erp/erp-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erp-app-ingress
  namespace: erp-dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: erp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: erp-app-service
                port:
                  number: 80
